dummies/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: nitro-backend
  name: nitro-backend
  namespace: staging
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    k8s-app: nitro-backend
