dummies/do-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-load-balancer
  namespace: staging
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
